--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles/index.css">
+
+    <link rel="icon" href="favicon.ico">
+
 </head>
 
 <body>
     <header>
         <div class="header-content">
-            <img src="images/logo.png" alt="Site Logo" class="logo">
+            <img src="images/logo-yonkett.png" alt="Site Logo" class="logo">
             <span class="name">Mizael Muro</span>
             <button class="hamburger" aria-label="Toggle navigation">
                 <span></span>
@@ -85,7 +88,7 @@
         </div>
 
         <div class="footer-info">
-            <p>&copy; <span id="currentyear"></span> • Mizael Muro • Mexico</p>
+            <p>&copy; <span id="currentyear"></span>  Mizael Muro  Mexico</p>
         </div>
 
         <div class="last-modified">
