--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -73,10 +73,10 @@
             
             <div class="social-links">
                 <a href="https://github.com/MizaelMuro01" target="_blank">
-                    <img src="/images/github.png" alt="GitHub" class="social-icon">
+                    <img src="images/github.png" alt="GitHub" class="social-icon">
                 </a>
                 <a href="https://www.linkedin.com/in/mizael-muro-509421250" target="_blank">
-                    <img src="/images/linkedin.png" alt="LinkedIn" class="social-icon">
+                    <img src="images/linkedin.png" alt="LinkedIn" class="social-icon">
                 </a>
             </div>
         </div>
