--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Mizael Muro">
     <title>Directory - Chamber</title>
 
-    <link rel="icon" href="../favicon.ico">
+    <link rel="icon" href="favicon.ico">
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/chamber.css">
