--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav class="navigation">
         <ul class="nav-menu">
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="chamber.html">Chamber</a></li>
+            <li><a href="https://mizaelmuro01.github.io/wdd231/chamber/index.html">Chamber</a></li>
             <li><a href="final.html">Final</a></li>
         </ul>
     </nav>
@@ -88,7 +88,7 @@
         </div>
 
         <div class="footer-info">
-            <p>&copy; <span id="currentyear"></span>  Mizael Muro  Mexico</p>
+            <p>&copy; <span id="currentyear"></span> Mizael Muro Mexico</p>
         </div>
 
         <div class="last-modified">
