--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -28,7 +28,7 @@
     <nav class="navigation">
         <ul class="nav-menu">
             <li><a href="directory.html" class="active">Directory</a></li>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="https://mizaelmuro01.github.io/wdd231/chamber/index.html">Chamber</a></li>
             <li><a href="join.html">Join us</a></li>
             <li><a href="discover.html">Discover</a></li>
             <li><a href="contact.html">Contact</a></li>
