--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -43,7 +43,7 @@
                     <h3>Application Details:</h3>
                     <div id="applicationData"></div>
                 </div>
-                <a href="index.html" class="cta-button">Return to Homepage</a>
+                <a href="index.html" class="home-btn">Return to Homepage</a>
             </div>
         </section>
     </main>
