--- a/siteplan.html
+++ b/siteplan.html
@@ -128,7 +128,7 @@
                 <div class="wireframe-view">
                     <h3>Mobile View</h3>
                     <div class="wireframe-image-container">
-                        <img src="phone.png" alt="Mobile Wireframe" class="wireframe-image">
+                        <img src="images/phone.png" alt="Mobile Wireframe" class="wireframe-image">
                         <div class="wireframe-description">
                             <h4>Mobile Layout Features:</h4>
                             <ul>
@@ -145,7 +145,7 @@
                 <div class="wireframe-view">
                     <h3>Desktop View</h3>
                     <div class="wireframe-image-container">
-                        <img src="web.png" alt="Desktop Wireframe" class="wireframe-image">
+                        <img src="images/web.png" alt="Desktop Wireframe" class="wireframe-image">
                         <div class="wireframe-description">
                             <h4>Desktop Layout Features:</h4>
                             <ul>
