--- a/siteplan.html
+++ b/siteplan.html
@@ -128,34 +128,14 @@
                 <div class="wireframe-view">
                     <h3>Mobile View</h3>
                     <div class="wireframe-image-container">
-                        <img src="images/phone.png" alt="Mobile Wireframe" class="wireframe-image">
-                        <div class="wireframe-description">
-                            <h4>Mobile Layout Features:</h4>
-                            <ul>
-                                <li>Stacked navigation menu</li>
-                                <li>Vertical feature arrangement</li>
-                                <li>Single column layout</li>
-                                <li>Mobile-optimized buttons</li>
-                                <li>Simplified footer</li>
-                            </ul>
-                        </div>
+                        <img src="phone.png" alt="Mobile Wireframe" class="wireframe-image">
                     </div>
                 </div>
                 
                 <div class="wireframe-view">
                     <h3>Desktop View</h3>
                     <div class="wireframe-image-container">
-                        <img src="images/web.png" alt="Desktop Wireframe" class="wireframe-image">
-                        <div class="wireframe-description">
-                            <h4>Desktop Layout Features:</h4>
-                            <ul>
-                                <li>Horizontal navigation bar</li>
-                                <li>Multi-column feature grid</li>
-                                <li>Side-by-side content sections</li>
-                                <li>Expanded footer with social links</li>
-                                <li>Wide hero banner</li>
-                            </ul>
-                        </div>
+                        <img src="web.png" alt="Desktop Wireframe" class="wireframe-image">
                     </div>
                 </div>
             </div>
