--- a/siteplan.html
+++ b/siteplan.html
@@ -135,7 +135,7 @@
                 <div class="wireframe-view">
                     <h3>Desktop View</h3>
                     <div class="wireframe-image-container">
-                        <img src="web.png" alt="Desktop Wireframe" class="wireframe-image">
+                        <img src="web.png" alt="Pageweb Wireframe" class="wireframe-image">
                     </div>
                 </div>
             </div>
