--- a/siteplan.html
+++ b/siteplan.html
@@ -23,7 +23,7 @@
             <p><strong>Yonkett App</strong></p>
             <p>This name was selected because it represents a modern and dynamic platform for car enthusiasts. "Yonkett" suggests connection and community, which are the fundamental pillars of our application.</p>
             <div class="domain-example">
-                <strong>Available domain:</strong> yonkettapp.com
+                <strong>Available domain:</strong> yonkett.com
             </div>
         </section>
 
