--- a/siteplan.html
+++ b/siteplan.html
@@ -128,14 +128,14 @@
                 <div class="wireframe-view">
                     <h3>Mobile View</h3>
                     <div class="wireframe-image-container">
-                        <img src="phone.png" alt="Mobile Wireframe" class="wireframe-image">
+                        <img src="images/phone.png" alt="Mobile Wireframe" class="wireframe-image">
                     </div>
                 </div>
                 
                 <div class="wireframe-view">
                     <h3>Desktop View</h3>
                     <div class="wireframe-image-container">
-                        <img src="web.png" alt="Pageweb Wireframe" class="wireframe-image">
+                        <img src="images/web.png" alt="Pageweb Wireframe" class="wireframe-image">
                     </div>
                 </div>
             </div>
